// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Visual regression — Lane A (structured-fact snapshots) fixture accidentals-display-policy matches its structured-fact snapshot: accidentals-display-policy 1`] = `
{
  "beams": [],
  "glyphCodepoints": [
    "e050",
    "e084",
    "e084",
    "e262",
    "e0a4",
    "e261",
    "e0a4",
    "e0a4",
    "e26a",
    "e0a4",
  ],
  "ledgerLines": [
    {
      "x1": 0,
      "x2": 105,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 330.4,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 330.4,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 330.4,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 330.4,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 330.4,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 115.6,
      "x2": 135.6,
      "y1": 140,
      "y2": 140,
    },
  ],
  "noteheads": [
    {
      "cp": "e0a4",
      "x": 48.8,
      "y": 122,
    },
    {
      "cp": "e0a4",
      "x": 125.6,
      "y": 140,
    },
    {
      "cp": "e0a4",
      "x": 189.6,
      "y": 104,
    },
    {
      "cp": "e0a4",
      "x": 266.4,
      "y": 116,
    },
  ],
  "stems": [
    {
      "x1": 0,
      "x2": 0,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 55.05,
      "x2": 55.05,
      "y1": 122,
      "y2": 78,
    },
    {
      "x1": 131.85,
      "x2": 131.85,
      "y1": 140,
      "y2": 96,
    },
    {
      "x1": 183.35,
      "x2": 183.35,
      "y1": 104,
      "y2": 148,
    },
    {
      "x1": 272.65,
      "x2": 272.65,
      "y1": 116,
      "y2": 72,
    },
    {
      "x1": 325.4,
      "x2": 325.4,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 330.4,
      "x2": 330.4,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 60,
      "y2": 148,
    },
  ],
}
`;

exports[`Visual regression — Lane A (structured-fact snapshots) fixture alto-clef-sharp-key matches its structured-fact snapshot: alto-clef-sharp-key 1`] = `
{
  "beams": [],
  "glyphCodepoints": [
    "e05c",
    "e262",
    "e262",
    "e262",
    "e084",
    "e084",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
  ],
  "ledgerLines": [
    {
      "x1": 0,
      "x2": 154,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 154,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 154,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 154,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 154,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 218,
      "x2": 238,
      "y1": 68,
      "y2": 68,
    },
  ],
  "noteheads": [
    {
      "cp": "e0a4",
      "x": 36,
      "y": 92,
    },
    {
      "cp": "e0a4",
      "x": 100,
      "y": 86,
    },
    {
      "cp": "e0a4",
      "x": 164,
      "y": 74,
    },
    {
      "cp": "e0a4",
      "x": 228,
      "y": 62,
    },
  ],
  "stems": [
    {
      "x1": 0,
      "x2": 0,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 29.75,
      "x2": 29.75,
      "y1": 92,
      "y2": 136,
    },
    {
      "x1": 93.75,
      "x2": 93.75,
      "y1": 86,
      "y2": 130,
    },
    {
      "x1": 157.75,
      "x2": 157.75,
      "y1": 74,
      "y2": 118,
    },
    {
      "x1": 221.75,
      "x2": 221.75,
      "y1": 62,
      "y2": 106,
    },
    {
      "x1": 287,
      "x2": 287,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 292,
      "x2": 292,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 60,
      "y2": 148,
    },
  ],
}
`;

exports[`Visual regression — Lane A (structured-fact snapshots) fixture bass-clef matches its structured-fact snapshot: bass-clef 1`] = `
{
  "beams": [],
  "glyphCodepoints": [
    "e062",
    "e084",
    "e084",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
  ],
  "ledgerLines": [
    {
      "x1": 0,
      "x2": 105,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 218,
      "x2": 238,
      "y1": 68,
      "y2": 68,
    },
  ],
  "noteheads": [
    {
      "cp": "e0a4",
      "x": 36,
      "y": 110,
    },
    {
      "cp": "e0a4",
      "x": 100,
      "y": 98,
    },
    {
      "cp": "e0a4",
      "x": 164,
      "y": 86,
    },
    {
      "cp": "e0a4",
      "x": 228,
      "y": 68,
    },
  ],
  "stems": [
    {
      "x1": 0,
      "x2": 0,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 42.25,
      "x2": 42.25,
      "y1": 110,
      "y2": 66,
    },
    {
      "x1": 93.75,
      "x2": 93.75,
      "y1": 98,
      "y2": 142,
    },
    {
      "x1": 157.75,
      "x2": 157.75,
      "y1": 86,
      "y2": 130,
    },
    {
      "x1": 221.75,
      "x2": 221.75,
      "y1": 68,
      "y2": 112,
    },
    {
      "x1": 287,
      "x2": 287,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 292,
      "x2": 292,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 60,
      "y2": 148,
    },
  ],
}
`;

exports[`Visual regression — Lane A (structured-fact snapshots) fixture beaming-3-8 matches its structured-fact snapshot: beaming-3-8 1`] = `
{
  "beams": [
    {
      "points": [
        {
          "x": 41.63,
          "y": 93.42,
        },
        {
          "x": 133.38,
          "y": 81.42,
        },
        {
          "x": 133.38,
          "y": 86.42,
        },
        {
          "x": 41.63,
          "y": 98.42,
        },
      ],
    },
  ],
  "glyphCodepoints": [
    "e050",
    "e083",
    "e088",
    "e0a4",
    "e0a4",
    "e0a4",
  ],
  "ledgerLines": [
    {
      "x1": 0,
      "x2": 105,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 171.76,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 171.76,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 171.76,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 171.76,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 171.76,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 26,
      "x2": 46,
      "y1": 140,
      "y2": 140,
    },
  ],
  "noteheads": [
    {
      "cp": "e0a4",
      "x": 36,
      "y": 140,
    },
    {
      "cp": "e0a4",
      "x": 81.25,
      "y": 134,
    },
    {
      "cp": "e0a4",
      "x": 126.51,
      "y": 128,
    },
  ],
  "stems": [
    {
      "x1": 0,
      "x2": 0,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 42.25,
      "x2": 42.25,
      "y1": 140,
      "y2": 95.84,
    },
    {
      "x1": 87.5,
      "x2": 87.5,
      "y1": 134,
      "y2": 89.92,
    },
    {
      "x1": 132.76,
      "x2": 132.76,
      "y1": 128,
      "y2": 84,
    },
    {
      "x1": 166.76,
      "x2": 166.76,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 171.76,
      "x2": 171.76,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 60,
      "y2": 148,
    },
  ],
}
`;

exports[`Visual regression — Lane A (structured-fact snapshots) fixture beaming-4-4 matches its structured-fact snapshot: beaming-4-4 1`] = `
{
  "beams": [
    {
      "points": [
        {
          "x": 41.63,
          "y": 93.42,
        },
        {
          "x": 88.13,
          "y": 87.42,
        },
        {
          "x": 88.13,
          "y": 92.42,
        },
        {
          "x": 41.63,
          "y": 98.42,
        },
      ],
    },
    {
      "points": [
        {
          "x": 132.13,
          "y": 81.42,
        },
        {
          "x": 178.64,
          "y": 75.42,
        },
        {
          "x": 178.64,
          "y": 80.42,
        },
        {
          "x": 132.13,
          "y": 86.42,
        },
      ],
    },
  ],
  "glyphCodepoints": [
    "e050",
    "e084",
    "e084",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e4e4",
  ],
  "ledgerLines": [
    {
      "x1": 0,
      "x2": 105,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 307.53,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 307.53,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 307.53,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 307.53,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 307.53,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 26,
      "x2": 46,
      "y1": 140,
      "y2": 140,
    },
  ],
  "noteheads": [
    {
      "cp": "e0a4",
      "x": 36,
      "y": 140,
    },
    {
      "cp": "e0a4",
      "x": 81.25,
      "y": 134,
    },
    {
      "cp": "e0a4",
      "x": 126.51,
      "y": 128,
    },
    {
      "cp": "e0a4",
      "x": 171.76,
      "y": 122,
    },
  ],
  "stems": [
    {
      "x1": 0,
      "x2": 0,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 42.25,
      "x2": 42.25,
      "y1": 140,
      "y2": 95.84,
    },
    {
      "x1": 87.5,
      "x2": 87.5,
      "y1": 134,
      "y2": 90,
    },
    {
      "x1": 132.76,
      "x2": 132.76,
      "y1": 128,
      "y2": 83.84,
    },
    {
      "x1": 178.01,
      "x2": 178.01,
      "y1": 122,
      "y2": 78,
    },
    {
      "x1": 302.53,
      "x2": 302.53,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 307.53,
      "x2": 307.53,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 60,
      "y2": 148,
    },
  ],
}
`;

exports[`Visual regression — Lane A (structured-fact snapshots) fixture beaming-6-8 matches its structured-fact snapshot: beaming-6-8 1`] = `
{
  "beams": [
    {
      "points": [
        {
          "x": 41.63,
          "y": 93.42,
        },
        {
          "x": 133.38,
          "y": 81.42,
        },
        {
          "x": 133.38,
          "y": 86.42,
        },
        {
          "x": 41.63,
          "y": 98.42,
        },
      ],
    },
    {
      "points": [
        {
          "x": 177.39,
          "y": 75.42,
        },
        {
          "x": 269.15,
          "y": 63.42,
        },
        {
          "x": 269.15,
          "y": 68.42,
        },
        {
          "x": 177.39,
          "y": 80.42,
        },
      ],
    },
  ],
  "glyphCodepoints": [
    "e050",
    "e086",
    "e088",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
  ],
  "ledgerLines": [
    {
      "x1": 0,
      "x2": 105,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 307.53,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 307.53,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 307.53,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 307.53,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 307.53,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 26,
      "x2": 46,
      "y1": 140,
      "y2": 140,
    },
  ],
  "noteheads": [
    {
      "cp": "e0a4",
      "x": 36,
      "y": 140,
    },
    {
      "cp": "e0a4",
      "x": 81.25,
      "y": 134,
    },
    {
      "cp": "e0a4",
      "x": 126.51,
      "y": 128,
    },
    {
      "cp": "e0a4",
      "x": 171.76,
      "y": 122,
    },
    {
      "cp": "e0a4",
      "x": 217.02,
      "y": 116,
    },
    {
      "cp": "e0a4",
      "x": 262.27,
      "y": 110,
    },
  ],
  "stems": [
    {
      "x1": 0,
      "x2": 0,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 42.25,
      "x2": 42.25,
      "y1": 140,
      "y2": 95.84,
    },
    {
      "x1": 87.5,
      "x2": 87.5,
      "y1": 134,
      "y2": 89.92,
    },
    {
      "x1": 132.76,
      "x2": 132.76,
      "y1": 128,
      "y2": 84,
    },
    {
      "x1": 178.01,
      "x2": 178.01,
      "y1": 122,
      "y2": 77.84,
    },
    {
      "x1": 223.27,
      "x2": 223.27,
      "y1": 116,
      "y2": 71.92,
    },
    {
      "x1": 268.52,
      "x2": 268.52,
      "y1": 110,
      "y2": 66,
    },
    {
      "x1": 302.53,
      "x2": 302.53,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 307.53,
      "x2": 307.53,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 60,
      "y2": 148,
    },
  ],
}
`;

exports[`Visual regression — Lane A (structured-fact snapshots) fixture beaming-9-8 matches its structured-fact snapshot: beaming-9-8 1`] = `
{
  "beams": [
    {
      "points": [
        {
          "x": 41.63,
          "y": 93.42,
        },
        {
          "x": 133.38,
          "y": 81.42,
        },
        {
          "x": 133.38,
          "y": 86.42,
        },
        {
          "x": 41.63,
          "y": 98.42,
        },
      ],
    },
    {
      "points": [
        {
          "x": 177.39,
          "y": 75.42,
        },
        {
          "x": 269.15,
          "y": 63.42,
        },
        {
          "x": 269.15,
          "y": 68.42,
        },
        {
          "x": 177.39,
          "y": 80.42,
        },
      ],
    },
    {
      "points": [
        {
          "x": 300.65,
          "y": 145.58,
        },
        {
          "x": 392.41,
          "y": 133.58,
        },
        {
          "x": 392.41,
          "y": 138.58,
        },
        {
          "x": 300.65,
          "y": 150.58,
        },
      ],
    },
  ],
  "glyphCodepoints": [
    "e050",
    "e089",
    "e088",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
  ],
  "ledgerLines": [
    {
      "x1": 0,
      "x2": 105,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 443.29,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 443.29,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 443.29,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 443.29,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 443.29,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 26,
      "x2": 46,
      "y1": 140,
      "y2": 140,
    },
  ],
  "noteheads": [
    {
      "cp": "e0a4",
      "x": 36,
      "y": 140,
    },
    {
      "cp": "e0a4",
      "x": 81.25,
      "y": 134,
    },
    {
      "cp": "e0a4",
      "x": 126.51,
      "y": 128,
    },
    {
      "cp": "e0a4",
      "x": 171.76,
      "y": 122,
    },
    {
      "cp": "e0a4",
      "x": 217.02,
      "y": 116,
    },
    {
      "cp": "e0a4",
      "x": 262.27,
      "y": 110,
    },
    {
      "cp": "e0a4",
      "x": 307.53,
      "y": 104,
    },
    {
      "cp": "e0a4",
      "x": 352.78,
      "y": 98,
    },
    {
      "cp": "e0a4",
      "x": 398.04,
      "y": 92,
    },
  ],
  "stems": [
    {
      "x1": 0,
      "x2": 0,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 42.25,
      "x2": 42.25,
      "y1": 140,
      "y2": 95.84,
    },
    {
      "x1": 87.5,
      "x2": 87.5,
      "y1": 134,
      "y2": 89.92,
    },
    {
      "x1": 132.76,
      "x2": 132.76,
      "y1": 128,
      "y2": 84,
    },
    {
      "x1": 178.01,
      "x2": 178.01,
      "y1": 122,
      "y2": 77.84,
    },
    {
      "x1": 223.27,
      "x2": 223.27,
      "y1": 116,
      "y2": 71.92,
    },
    {
      "x1": 268.52,
      "x2": 268.52,
      "y1": 110,
      "y2": 66,
    },
    {
      "x1": 301.28,
      "x2": 301.28,
      "y1": 104,
      "y2": 148,
    },
    {
      "x1": 346.53,
      "x2": 346.53,
      "y1": 98,
      "y2": 142.08,
    },
    {
      "x1": 391.79,
      "x2": 391.79,
      "y1": 92,
      "y2": 136.16,
    },
    {
      "x1": 438.29,
      "x2": 438.29,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 443.29,
      "x2": 443.29,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 60,
      "y2": 148,
    },
  ],
}
`;

exports[`Visual regression — Lane A (structured-fact snapshots) fixture beaming-12-8 matches its structured-fact snapshot: beaming-12-8 1`] = `
{
  "beams": [
    {
      "points": [
        {
          "x": 41.63,
          "y": 93.42,
        },
        {
          "x": 133.38,
          "y": 81.42,
        },
        {
          "x": 133.38,
          "y": 86.42,
        },
        {
          "x": 41.63,
          "y": 98.42,
        },
      ],
    },
    {
      "points": [
        {
          "x": 177.39,
          "y": 75.42,
        },
        {
          "x": 269.15,
          "y": 63.42,
        },
        {
          "x": 269.15,
          "y": 68.42,
        },
        {
          "x": 177.39,
          "y": 80.42,
        },
      ],
    },
    {
      "points": [
        {
          "x": 300.65,
          "y": 145.58,
        },
        {
          "x": 392.41,
          "y": 133.58,
        },
        {
          "x": 392.41,
          "y": 138.58,
        },
        {
          "x": 300.65,
          "y": 150.58,
        },
      ],
    },
    {
      "points": [
        {
          "x": 436.42,
          "y": 127.58,
        },
        {
          "x": 528.18,
          "y": 115.58,
        },
        {
          "x": 528.18,
          "y": 120.58,
        },
        {
          "x": 436.42,
          "y": 132.58,
        },
      ],
    },
  ],
  "glyphCodepoints": [
    "e050",
    "e081",
    "e088",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
  ],
  "ledgerLines": [
    {
      "x1": 0,
      "x2": 105,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 579.06,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 579.06,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 579.06,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 579.06,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 579.06,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 26,
      "x2": 46,
      "y1": 140,
      "y2": 140,
    },
  ],
  "noteheads": [
    {
      "cp": "e0a4",
      "x": 36,
      "y": 140,
    },
    {
      "cp": "e0a4",
      "x": 81.25,
      "y": 134,
    },
    {
      "cp": "e0a4",
      "x": 126.51,
      "y": 128,
    },
    {
      "cp": "e0a4",
      "x": 171.76,
      "y": 122,
    },
    {
      "cp": "e0a4",
      "x": 217.02,
      "y": 116,
    },
    {
      "cp": "e0a4",
      "x": 262.27,
      "y": 110,
    },
    {
      "cp": "e0a4",
      "x": 307.53,
      "y": 104,
    },
    {
      "cp": "e0a4",
      "x": 352.78,
      "y": 98,
    },
    {
      "cp": "e0a4",
      "x": 398.04,
      "y": 92,
    },
    {
      "cp": "e0a4",
      "x": 443.29,
      "y": 86,
    },
    {
      "cp": "e0a4",
      "x": 488.55,
      "y": 80,
    },
    {
      "cp": "e0a4",
      "x": 533.8,
      "y": 74,
    },
  ],
  "stems": [
    {
      "x1": 0,
      "x2": 0,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 42.25,
      "x2": 42.25,
      "y1": 140,
      "y2": 95.84,
    },
    {
      "x1": 87.5,
      "x2": 87.5,
      "y1": 134,
      "y2": 89.92,
    },
    {
      "x1": 132.76,
      "x2": 132.76,
      "y1": 128,
      "y2": 84,
    },
    {
      "x1": 178.01,
      "x2": 178.01,
      "y1": 122,
      "y2": 77.84,
    },
    {
      "x1": 223.27,
      "x2": 223.27,
      "y1": 116,
      "y2": 71.92,
    },
    {
      "x1": 268.52,
      "x2": 268.52,
      "y1": 110,
      "y2": 66,
    },
    {
      "x1": 301.28,
      "x2": 301.28,
      "y1": 104,
      "y2": 148,
    },
    {
      "x1": 346.53,
      "x2": 346.53,
      "y1": 98,
      "y2": 142.08,
    },
    {
      "x1": 391.79,
      "x2": 391.79,
      "y1": 92,
      "y2": 136.16,
    },
    {
      "x1": 437.04,
      "x2": 437.04,
      "y1": 86,
      "y2": 130,
    },
    {
      "x1": 482.3,
      "x2": 482.3,
      "y1": 80,
      "y2": 124.08,
    },
    {
      "x1": 527.55,
      "x2": 527.55,
      "y1": 74,
      "y2": 118.16,
    },
    {
      "x1": 574.06,
      "x2": 574.06,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 579.06,
      "x2": 579.06,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 60,
      "y2": 148,
    },
  ],
}
`;

exports[`Visual regression — Lane A (structured-fact snapshots) fixture chord-triad matches its structured-fact snapshot: chord-triad 1`] = `
{
  "beams": [],
  "glyphCodepoints": [
    "e050",
    "e084",
    "e084",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a3",
    "e0a3",
    "e0a3",
  ],
  "ledgerLines": [
    {
      "x1": 0,
      "x2": 105,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 254.51,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 254.51,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 254.51,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 254.51,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 254.51,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 26,
      "x2": 46,
      "y1": 140,
      "y2": 140,
    },
  ],
  "noteheads": [
    {
      "cp": "e0a4",
      "x": 36,
      "y": 116,
    },
    {
      "cp": "e0a4",
      "x": 36,
      "y": 128,
    },
    {
      "cp": "e0a4",
      "x": 36,
      "y": 140,
    },
    {
      "cp": "e0a4",
      "x": 100,
      "y": 110,
    },
    {
      "cp": "e0a4",
      "x": 100,
      "y": 122,
    },
    {
      "cp": "e0a4",
      "x": 100,
      "y": 134,
    },
    {
      "cp": "e0a3",
      "x": 164,
      "y": 98,
    },
    {
      "cp": "e0a3",
      "x": 164,
      "y": 116,
    },
    {
      "cp": "e0a3",
      "x": 164,
      "y": 128,
    },
  ],
  "stems": [
    {
      "x1": 0,
      "x2": 0,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 42.25,
      "x2": 42.25,
      "y1": 140,
      "y2": 72,
    },
    {
      "x1": 106.25,
      "x2": 106.25,
      "y1": 134,
      "y2": 66,
    },
    {
      "x1": 170.25,
      "x2": 170.25,
      "y1": 128,
      "y2": 54,
    },
    {
      "x1": 249.51,
      "x2": 249.51,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 254.51,
      "x2": 254.51,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 60,
      "y2": 148,
    },
  ],
}
`;

exports[`Visual regression — Lane A (structured-fact snapshots) fixture grand-staff matches its structured-fact snapshot: grand-staff 1`] = `
{
  "beams": [],
  "glyphCodepoints": [
    "e050",
    "e084",
    "e084",
    "e0a3",
    "e0a3",
    "e0a3",
    "e0a4",
    "e0a4",
    "e062",
    "e084",
    "e084",
    "e0a3",
    "e0a3",
    "e0a4",
    "e0a4",
  ],
  "ledgerLines": [
    {
      "x1": 0,
      "x2": 105,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 254.51,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 254.51,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 254.51,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 254.51,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 254.51,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 254.51,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 254.51,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 254.51,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 254.51,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 254.51,
      "y1": 128,
      "y2": 128,
    },
  ],
  "noteheads": [
    {
      "cp": "e0a3",
      "x": 36,
      "y": 98,
    },
    {
      "cp": "e0a3",
      "x": 36,
      "y": 116,
    },
    {
      "cp": "e0a3",
      "x": 36,
      "y": 128,
    },
    {
      "cp": "e0a4",
      "x": 126.51,
      "y": 134,
    },
    {
      "cp": "e0a4",
      "x": 190.51,
      "y": 128,
    },
    {
      "cp": "e0a3",
      "x": 36,
      "y": 86,
    },
    {
      "cp": "e0a3",
      "x": 36,
      "y": 110,
    },
    {
      "cp": "e0a4",
      "x": 126.51,
      "y": 116,
    },
    {
      "cp": "e0a4",
      "x": 190.51,
      "y": 110,
    },
  ],
  "stems": [
    {
      "x1": 20,
      "x2": 20,
      "y1": 80,
      "y2": 248,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 42.25,
      "x2": 42.25,
      "y1": 128,
      "y2": 54,
    },
    {
      "x1": 132.76,
      "x2": 132.76,
      "y1": 134,
      "y2": 90,
    },
    {
      "x1": 196.76,
      "x2": 196.76,
      "y1": 128,
      "y2": 84,
    },
    {
      "x1": 249.51,
      "x2": 249.51,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 254.51,
      "x2": 254.51,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 29.75,
      "x2": 29.75,
      "y1": 86,
      "y2": 154,
    },
    {
      "x1": 132.76,
      "x2": 132.76,
      "y1": 116,
      "y2": 72,
    },
    {
      "x1": 196.76,
      "x2": 196.76,
      "y1": 110,
      "y2": 66,
    },
    {
      "x1": 249.51,
      "x2": 249.51,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 254.51,
      "x2": 254.51,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 60,
      "y2": 268,
    },
  ],
}
`;

exports[`Visual regression — Lane A (structured-fact snapshots) fixture justification-multi-measure matches its structured-fact snapshot: justification-multi-measure 1`] = `
{
  "beams": [
    {
      "points": [
        {
          "x": 29.13,
          "y": 139.58,
        },
        {
          "x": 75.63,
          "y": 145.58,
        },
        {
          "x": 75.63,
          "y": 150.58,
        },
        {
          "x": 29.13,
          "y": 144.58,
        },
      ],
    },
    {
      "points": [
        {
          "x": 132.13,
          "y": 63.42,
        },
        {
          "x": 178.64,
          "y": 69.42,
        },
        {
          "x": 178.64,
          "y": 74.42,
        },
        {
          "x": 132.13,
          "y": 68.42,
        },
      ],
    },
    {
      "points": [
        {
          "x": 222.64,
          "y": 75.42,
        },
        {
          "x": 269.15,
          "y": 81.42,
        },
        {
          "x": 269.15,
          "y": 86.42,
        },
        {
          "x": 222.64,
          "y": 80.42,
        },
      ],
    },
    {
      "points": [
        {
          "x": 313.15,
          "y": 87.42,
        },
        {
          "x": 359.66,
          "y": 93.42,
        },
        {
          "x": 359.66,
          "y": 98.42,
        },
        {
          "x": 313.15,
          "y": 92.42,
        },
      ],
    },
  ],
  "glyphCodepoints": [
    "e050",
    "e084",
    "e084",
    "e0a2",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a3",
    "e0a3",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
  ],
  "ledgerLines": [
    {
      "x1": 0,
      "x2": 105,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 164,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 164,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 164,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 164,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 164,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 22,
      "x2": 50,
      "y1": 140,
      "y2": 140,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 26,
      "x2": 46,
      "y1": 140,
      "y2": 140,
    },
    {
      "x1": 0,
      "x2": 217.02,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 217.02,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 217.02,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 217.02,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 217.02,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 398.04,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 398.04,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 398.04,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 398.04,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 398.04,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 342.78,
      "x2": 362.78,
      "y1": 140,
      "y2": 140,
    },
  ],
  "noteheads": [
    {
      "cp": "e0a2",
      "x": 36,
      "y": 140,
    },
    {
      "cp": "e0a4",
      "x": 36,
      "y": 140,
    },
    {
      "cp": "e0a4",
      "x": 100,
      "y": 134,
    },
    {
      "cp": "e0a4",
      "x": 164,
      "y": 128,
    },
    {
      "cp": "e0a4",
      "x": 228,
      "y": 122,
    },
    {
      "cp": "e0a3",
      "x": 36,
      "y": 116,
    },
    {
      "cp": "e0a3",
      "x": 126.51,
      "y": 110,
    },
    {
      "cp": "e0a4",
      "x": 36,
      "y": 98,
    },
    {
      "cp": "e0a4",
      "x": 81.25,
      "y": 104,
    },
    {
      "cp": "e0a4",
      "x": 126.51,
      "y": 110,
    },
    {
      "cp": "e0a4",
      "x": 171.76,
      "y": 116,
    },
    {
      "cp": "e0a4",
      "x": 217.02,
      "y": 122,
    },
    {
      "cp": "e0a4",
      "x": 262.27,
      "y": 128,
    },
    {
      "cp": "e0a4",
      "x": 307.53,
      "y": 134,
    },
    {
      "cp": "e0a4",
      "x": 352.78,
      "y": 140,
    },
  ],
  "stems": [
    {
      "x1": 0,
      "x2": 0,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 164,
      "x2": 164,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 42.25,
      "x2": 42.25,
      "y1": 140,
      "y2": 96,
    },
    {
      "x1": 106.25,
      "x2": 106.25,
      "y1": 134,
      "y2": 90,
    },
    {
      "x1": 170.25,
      "x2": 170.25,
      "y1": 128,
      "y2": 84,
    },
    {
      "x1": 234.25,
      "x2": 234.25,
      "y1": 122,
      "y2": 78,
    },
    {
      "x1": 292,
      "x2": 292,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 42.25,
      "x2": 42.25,
      "y1": 116,
      "y2": 72,
    },
    {
      "x1": 132.76,
      "x2": 132.76,
      "y1": 110,
      "y2": 66,
    },
    {
      "x1": 217.02,
      "x2": 217.02,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 29.75,
      "x2": 29.75,
      "y1": 98,
      "y2": 142.16,
    },
    {
      "x1": 75,
      "x2": 75,
      "y1": 104,
      "y2": 148,
    },
    {
      "x1": 132.76,
      "x2": 132.76,
      "y1": 110,
      "y2": 66,
    },
    {
      "x1": 178.01,
      "x2": 178.01,
      "y1": 116,
      "y2": 71.84,
    },
    {
      "x1": 223.27,
      "x2": 223.27,
      "y1": 122,
      "y2": 78,
    },
    {
      "x1": 268.52,
      "x2": 268.52,
      "y1": 128,
      "y2": 83.84,
    },
    {
      "x1": 313.78,
      "x2": 313.78,
      "y1": 134,
      "y2": 90,
    },
    {
      "x1": 359.03,
      "x2": 359.03,
      "y1": 140,
      "y2": 95.84,
    },
    {
      "x1": 393.04,
      "x2": 393.04,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 398.04,
      "x2": 398.04,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 60,
      "y2": 148,
    },
  ],
}
`;

exports[`Visual regression — Lane A (structured-fact snapshots) fixture key-flat-Eb-major matches its structured-fact snapshot: key-flat-Eb-major 1`] = `
{
  "beams": [],
  "glyphCodepoints": [
    "e050",
    "e260",
    "e260",
    "e260",
    "e084",
    "e084",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
  ],
  "ledgerLines": [
    {
      "x1": 0,
      "x2": 154,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 154,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 154,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 154,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 154,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 128,
      "y2": 128,
    },
  ],
  "noteheads": [
    {
      "cp": "e0a4",
      "x": 36,
      "y": 128,
    },
    {
      "cp": "e0a4",
      "x": 100,
      "y": 116,
    },
    {
      "cp": "e0a4",
      "x": 164,
      "y": 104,
    },
    {
      "cp": "e0a4",
      "x": 228,
      "y": 86,
    },
  ],
  "stems": [
    {
      "x1": 0,
      "x2": 0,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 42.25,
      "x2": 42.25,
      "y1": 128,
      "y2": 84,
    },
    {
      "x1": 106.25,
      "x2": 106.25,
      "y1": 116,
      "y2": 72,
    },
    {
      "x1": 157.75,
      "x2": 157.75,
      "y1": 104,
      "y2": 148,
    },
    {
      "x1": 221.75,
      "x2": 221.75,
      "y1": 86,
      "y2": 130,
    },
    {
      "x1": 287,
      "x2": 287,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 292,
      "x2": 292,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 60,
      "y2": 148,
    },
  ],
}
`;

exports[`Visual regression — Lane A (structured-fact snapshots) fixture key-minor-Em matches its structured-fact snapshot: key-minor-Em 1`] = `
{
  "beams": [],
  "glyphCodepoints": [
    "e050",
    "e262",
    "e084",
    "e084",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
  ],
  "ledgerLines": [
    {
      "x1": 0,
      "x2": 128,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 128,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 128,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 128,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 128,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 128,
      "y2": 128,
    },
  ],
  "noteheads": [
    {
      "cp": "e0a4",
      "x": 36,
      "y": 128,
    },
    {
      "cp": "e0a4",
      "x": 100,
      "y": 122,
    },
    {
      "cp": "e0a4",
      "x": 164,
      "y": 116,
    },
    {
      "cp": "e0a4",
      "x": 228,
      "y": 104,
    },
  ],
  "stems": [
    {
      "x1": 0,
      "x2": 0,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 42.25,
      "x2": 42.25,
      "y1": 128,
      "y2": 84,
    },
    {
      "x1": 106.25,
      "x2": 106.25,
      "y1": 122,
      "y2": 78,
    },
    {
      "x1": 170.25,
      "x2": 170.25,
      "y1": 116,
      "y2": 72,
    },
    {
      "x1": 221.75,
      "x2": 221.75,
      "y1": 104,
      "y2": 148,
    },
    {
      "x1": 287,
      "x2": 287,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 292,
      "x2": 292,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 60,
      "y2": 148,
    },
  ],
}
`;

exports[`Visual regression — Lane A (structured-fact snapshots) fixture key-sharp-A-major matches its structured-fact snapshot: key-sharp-A-major 1`] = `
{
  "beams": [],
  "glyphCodepoints": [
    "e050",
    "e262",
    "e262",
    "e262",
    "e084",
    "e084",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
  ],
  "ledgerLines": [
    {
      "x1": 0,
      "x2": 154,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 154,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 154,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 154,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 154,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 218,
      "x2": 238,
      "y1": 68,
      "y2": 68,
    },
  ],
  "noteheads": [
    {
      "cp": "e0a4",
      "x": 36,
      "y": 110,
    },
    {
      "cp": "e0a4",
      "x": 100,
      "y": 98,
    },
    {
      "cp": "e0a4",
      "x": 164,
      "y": 86,
    },
    {
      "cp": "e0a4",
      "x": 228,
      "y": 68,
    },
  ],
  "stems": [
    {
      "x1": 0,
      "x2": 0,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 42.25,
      "x2": 42.25,
      "y1": 110,
      "y2": 66,
    },
    {
      "x1": 93.75,
      "x2": 93.75,
      "y1": 98,
      "y2": 142,
    },
    {
      "x1": 157.75,
      "x2": 157.75,
      "y1": 86,
      "y2": 130,
    },
    {
      "x1": 221.75,
      "x2": 221.75,
      "y1": 68,
      "y2": 112,
    },
    {
      "x1": 287,
      "x2": 287,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 292,
      "x2": 292,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 60,
      "y2": 148,
    },
  ],
}
`;

exports[`Visual regression — Lane A (structured-fact snapshots) fixture pickup-measure matches its structured-fact snapshot: pickup-measure 1`] = `
{
  "beams": [],
  "glyphCodepoints": [
    "e050",
    "e084",
    "e084",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
  ],
  "ledgerLines": [
    {
      "x1": 0,
      "x2": 105,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 100,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 100,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 100,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 100,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 100,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 128,
      "y2": 128,
    },
  ],
  "noteheads": [
    {
      "cp": "e0a4",
      "x": 36,
      "y": 116,
    },
    {
      "cp": "e0a4",
      "x": 36,
      "y": 98,
    },
    {
      "cp": "e0a4",
      "x": 100,
      "y": 104,
    },
    {
      "cp": "e0a4",
      "x": 164,
      "y": 110,
    },
    {
      "cp": "e0a4",
      "x": 228,
      "y": 116,
    },
  ],
  "stems": [
    {
      "x1": 0,
      "x2": 0,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 42.25,
      "x2": 42.25,
      "y1": 116,
      "y2": 72,
    },
    {
      "x1": 100,
      "x2": 100,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 29.75,
      "x2": 29.75,
      "y1": 98,
      "y2": 142,
    },
    {
      "x1": 93.75,
      "x2": 93.75,
      "y1": 104,
      "y2": 148,
    },
    {
      "x1": 170.25,
      "x2": 170.25,
      "y1": 110,
      "y2": 66,
    },
    {
      "x1": 234.25,
      "x2": 234.25,
      "y1": 116,
      "y2": 72,
    },
    {
      "x1": 287,
      "x2": 287,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 292,
      "x2": 292,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 60,
      "y2": 148,
    },
  ],
}
`;

exports[`Visual regression — Lane A (structured-fact snapshots) fixture rests-all-durations matches its structured-fact snapshot: rests-all-durations 1`] = `
{
  "beams": [],
  "glyphCodepoints": [
    "e050",
    "e084",
    "e084",
    "e4e5",
    "e4e6",
    "e4e6",
    "e4e5",
    "e4e5",
  ],
  "ledgerLines": [
    {
      "x1": 0,
      "x2": 105,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 318.51,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 318.51,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 318.51,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 318.51,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 318.51,
      "y1": 128,
      "y2": 128,
    },
  ],
  "noteheads": [],
  "stems": [
    {
      "x1": 0,
      "x2": 0,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 313.51,
      "x2": 313.51,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 318.51,
      "x2": 318.51,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 60,
      "y2": 148,
    },
  ],
}
`;

exports[`Visual regression — Lane A (structured-fact snapshots) fixture tenor-clef-flat-key matches its structured-fact snapshot: tenor-clef-flat-key 1`] = `
{
  "beams": [],
  "glyphCodepoints": [
    "e05c",
    "e260",
    "e260",
    "e260",
    "e084",
    "e084",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
  ],
  "ledgerLines": [
    {
      "x1": 0,
      "x2": 154,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 154,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 154,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 154,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 154,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 292,
      "y1": 128,
      "y2": 128,
    },
  ],
  "noteheads": [
    {
      "cp": "e0a4",
      "x": 36,
      "y": 134,
    },
    {
      "cp": "e0a4",
      "x": 100,
      "y": 122,
    },
    {
      "cp": "e0a4",
      "x": 164,
      "y": 110,
    },
    {
      "cp": "e0a4",
      "x": 228,
      "y": 98,
    },
  ],
  "stems": [
    {
      "x1": 0,
      "x2": 0,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 42.25,
      "x2": 42.25,
      "y1": 134,
      "y2": 90,
    },
    {
      "x1": 106.25,
      "x2": 106.25,
      "y1": 122,
      "y2": 78,
    },
    {
      "x1": 170.25,
      "x2": 170.25,
      "y1": 110,
      "y2": 66,
    },
    {
      "x1": 221.75,
      "x2": 221.75,
      "y1": 98,
      "y2": 142,
    },
    {
      "x1": 287,
      "x2": 287,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 292,
      "x2": 292,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 60,
      "y2": 148,
    },
  ],
}
`;

exports[`Visual regression — Lane A (structured-fact snapshots) fixture treble-ascending-scale matches its structured-fact snapshot: treble-ascending-scale 1`] = `
{
  "beams": [
    {
      "points": [
        {
          "x": 41.63,
          "y": 93.42,
        },
        {
          "x": 88.13,
          "y": 87.42,
        },
        {
          "x": 88.13,
          "y": 92.42,
        },
        {
          "x": 41.63,
          "y": 98.42,
        },
      ],
    },
    {
      "points": [
        {
          "x": 132.13,
          "y": 81.42,
        },
        {
          "x": 178.64,
          "y": 75.42,
        },
        {
          "x": 178.64,
          "y": 80.42,
        },
        {
          "x": 132.13,
          "y": 86.42,
        },
      ],
    },
    {
      "points": [
        {
          "x": 222.64,
          "y": 69.42,
        },
        {
          "x": 269.15,
          "y": 63.42,
        },
        {
          "x": 269.15,
          "y": 68.42,
        },
        {
          "x": 222.64,
          "y": 74.42,
        },
      ],
    },
    {
      "points": [
        {
          "x": 300.65,
          "y": 145.58,
        },
        {
          "x": 347.16,
          "y": 139.58,
        },
        {
          "x": 347.16,
          "y": 144.58,
        },
        {
          "x": 300.65,
          "y": 150.58,
        },
      ],
    },
  ],
  "glyphCodepoints": [
    "e050",
    "e084",
    "e084",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
  ],
  "ledgerLines": [
    {
      "x1": 0,
      "x2": 105,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 398.04,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 398.04,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 398.04,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 398.04,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 398.04,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 26,
      "x2": 46,
      "y1": 140,
      "y2": 140,
    },
  ],
  "noteheads": [
    {
      "cp": "e0a4",
      "x": 36,
      "y": 140,
    },
    {
      "cp": "e0a4",
      "x": 81.25,
      "y": 134,
    },
    {
      "cp": "e0a4",
      "x": 126.51,
      "y": 128,
    },
    {
      "cp": "e0a4",
      "x": 171.76,
      "y": 122,
    },
    {
      "cp": "e0a4",
      "x": 217.02,
      "y": 116,
    },
    {
      "cp": "e0a4",
      "x": 262.27,
      "y": 110,
    },
    {
      "cp": "e0a4",
      "x": 307.53,
      "y": 104,
    },
    {
      "cp": "e0a4",
      "x": 352.78,
      "y": 98,
    },
  ],
  "stems": [
    {
      "x1": 0,
      "x2": 0,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 42.25,
      "x2": 42.25,
      "y1": 140,
      "y2": 95.84,
    },
    {
      "x1": 87.5,
      "x2": 87.5,
      "y1": 134,
      "y2": 90,
    },
    {
      "x1": 132.76,
      "x2": 132.76,
      "y1": 128,
      "y2": 83.84,
    },
    {
      "x1": 178.01,
      "x2": 178.01,
      "y1": 122,
      "y2": 78,
    },
    {
      "x1": 223.27,
      "x2": 223.27,
      "y1": 116,
      "y2": 71.84,
    },
    {
      "x1": 268.52,
      "x2": 268.52,
      "y1": 110,
      "y2": 66,
    },
    {
      "x1": 301.28,
      "x2": 301.28,
      "y1": 104,
      "y2": 148,
    },
    {
      "x1": 346.53,
      "x2": 346.53,
      "y1": 98,
      "y2": 142.16,
    },
    {
      "x1": 393.04,
      "x2": 393.04,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 398.04,
      "x2": 398.04,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 60,
      "y2": 148,
    },
  ],
}
`;

exports[`Visual regression — Lane A (structured-fact snapshots) fixture triplet-complete matches its structured-fact snapshot: triplet-complete 1`] = `
{
  "beams": [
    {
      "points": [
        {
          "x": 41.63,
          "y": 93.4,
        },
        {
          "x": 116.78,
          "y": 81.4,
        },
        {
          "x": 116.78,
          "y": 86.4,
        },
        {
          "x": 41.63,
          "y": 98.4,
        },
      ],
    },
  ],
  "glyphCodepoints": [
    "e050",
    "e084",
    "e084",
    "e0a4",
    "e0a4",
    "e0a4",
    "e0a4",
    "e4e4",
    "33",
  ],
  "ledgerLines": [
    {
      "x1": 0,
      "x2": 105,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 105,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 301.36,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 0,
      "x2": 301.36,
      "y1": 92,
      "y2": 92,
    },
    {
      "x1": 0,
      "x2": 301.36,
      "y1": 104,
      "y2": 104,
    },
    {
      "x1": 0,
      "x2": 301.36,
      "y1": 116,
      "y2": 116,
    },
    {
      "x1": 0,
      "x2": 301.36,
      "y1": 128,
      "y2": 128,
    },
    {
      "x1": 26,
      "x2": 46,
      "y1": 140,
      "y2": 140,
    },
  ],
  "noteheads": [
    {
      "cp": "e0a4",
      "x": 36,
      "y": 140,
    },
    {
      "cp": "e0a4",
      "x": 72.95,
      "y": 134,
    },
    {
      "cp": "e0a4",
      "x": 109.9,
      "y": 128,
    },
    {
      "cp": "e0a4",
      "x": 146.85,
      "y": 122,
    },
  ],
  "stems": [
    {
      "x1": 0,
      "x2": 0,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 42.25,
      "x2": 42.25,
      "y1": 140,
      "y2": 95.8,
    },
    {
      "x1": 79.2,
      "x2": 79.2,
      "y1": 134,
      "y2": 89.9,
    },
    {
      "x1": 116.15,
      "x2": 116.15,
      "y1": 128,
      "y2": 84,
    },
    {
      "x1": 153.1,
      "x2": 153.1,
      "y1": 122,
      "y2": 78,
    },
    {
      "x1": 296.36,
      "x2": 296.36,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 301.36,
      "x2": 301.36,
      "y1": 80,
      "y2": 128,
    },
    {
      "x1": 0,
      "x2": 0,
      "y1": 60,
      "y2": 148,
    },
  ],
}
`;
